# Anvil-v8

./: .gitignore  README.md  package-lock.json
client_code/: YouTubeModule.py
client_code/ComponentDemo/: __init__.py  form_module.yaml  form_template.yaml
client_code/components/: README.md  README_SERVICE_WORKER.md  build.ps1  build.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
client_code/components/scripts/: build-service-worker.js
client_code/components/src/: service-worker-registration.js  service-worker.js
client_code/components/src/react/: TodoList.js  VideoProcessor.js  YouTubeSearch.js  index.js
client_code/components/src/vue/: TodoList.vue  VideoProcessor.vue  YouTubeSearch.vue  index.js
client_code/graphql/: README.md  client.js  hooks.js  index.js  resolvers.js  schema.js  vue-composables.js
client_code/styles/: README.md  build.ps1  build.sh  package.json
client_code/styles/sass/: _mixins.scss  _variables.scss  main.scss
client_code/styles/sass/components/: _buttons.scss  _forms.scss  _layout.scss  _todo.scss  _video-processor.scss
client_code/styles/scripts/: copy-to-theme.js
client_code/wasm/: CMakeLists.txt  README.md  build.ps1  build.sh  minify.js  package.json
client_code/wasm/src/: video_processor.cpp  video_processor_wrapper.js
src/components/YouTube/: YouTubeGrid.tsx  YouTubeIntegration.tsx  YouTubePlayer.tsx
src/pages/: index.tsx
theme/js/: PlaceholderHandler.js  YouTubeGrid.js  YouTubePlayer.js  index.js
